<resources>
    <string name="app_name">StudyFlowApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Title</string>
    <string name="deadline">Deadline</string>
    <string name="hello">Hello</string>
    <string name="user_name">User Name</string>
    <string name="pick_image">Pick Image</string>
    <string name="select_date">Select Date</string>
    <string name="finish">Finish</string>
    <string name="task">Task</string>
    <string name="task_name">Task name</string>
    <string name="course">Course</string>
    <string name="type">Type</string>
    <string name="delete_dialog_title">Delete Task</string>
    <string name="delete_dialog_message">Are you sure you want to delete this task?</string>
    <string name="delete_confirmation_alert">Task deleted successfully"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="assignment">Assignment</string>
    <string name="exam">Exam</string>
    <string name="project">Project</string>
    <string name="lesson">Lesson</string>
    <string name="other">Other</string>
    <string-array name="task_types_options">
        <item>@string/assignment</item>
        <item>@string/exam</item>
        <item>@string/project</item>
        <item>@string/lesson</item>
        <item>@string/other</item>
    </string-array>


    <string name="description">Description</string>
    <string name="video">Video</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="open_tasks_count">You have %1$d \n open tasks</string>
    <string name="upcoming_tasks_count">You have %1$d \n upcoming tasks</string>
    <string name="precentage_sign">%</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="create">create</string>
    <string name="welcome_to_n_study_planner_app" translatable="false">Welcome to \n Study Planner App!</string>
    <string name="app_logo_icon">app logo icon</string>
    <string name="add_task">Add Task</string>
    <string name="set_deadline">Set Deadline</string>
    <string name="change_image">Change Image</string>
    <string name="task_image">Task Image</string>
    <string name="edit_description">Edit Description</string>
    <string name="update_deadline">Update Deadline</string>
    <string name="task_title">Task Title</string>
    <string name="not_specified">Not specified</string>
    <string name="no_description_provided">No description provided</string>
    <string name="progress">Progress</string>
    <string name="set_description">Set Description</string>
    <string name="add_description">Add Description</string>
    <string name="upload_image">Upload Image</string>
    <string name="process_text">Process Text</string>
    <string name="upload">Upload</string>
    <string name="get_started">Get Started</string>
    <string name="course_field">Course:</string>
    <string name="type_field">Type:</string>
    <string name="deadline_field">Deadline:</string>
    <string name="update_image">Update image</string>
    <string name="set_profile_image">Set Profile Image</string>
    <string name="set_profile_detalis">Set Profile Detalis</string>
    <string name="set_profile">Set Profile</string>
    <string name="welcome_to_n_studyflow_app">Welcome to \n StudyFlow App!</string>

</resources>