<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".ui.edit_task.EditTaskFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickImageBtnEdit"
        app:layout_constraintVertical_chainStyle="spread">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskTitleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/taskSliderEdit"
        style="@style/sliderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:value="0.0"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        android:stepSize="1"
        app:tickVisible="false"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
        app:layout_constraintTop_toBottomOf="@+id/taskDateEditBtn"
        tools:layout_editor_absoluteX="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:maxHeight="220dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/saveChangesBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskSliderEdit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskDescriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:minLines="7"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:hint="@string/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/outlinedTextField"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:startIconDrawable="@drawable/icon_assignment">

        <AutoCompleteTextView
            android:id="@+id/taskTypeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            app:simpleItems="@array/task_types_options" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/course"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout6"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout6"
        app:layout_constraintVertical_bias="0.5"
        app:startIconDrawable="@drawable/icon_assignment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskCourseEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/taskDateEditBtn"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/select_date"
        app:layout_constraintBottom_toTopOf="@+id/taskSliderEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

    <Button
        android:id="@+id/pickImageBtnEdit"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/pick_image"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/taskImageEdit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/taskImageEdit"
        app:layout_constraintTop_toBottomOf="@+id/taskImageEdit" />


    <ImageView
        android:id="@+id/taskImageEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/icon_camera"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toTopOf="@+id/pickImageBtnEdit"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveChangesBtn"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/save_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="260dp" />

</androidx.constraintlayout.widget.ConstraintLayout>