<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#F1F8FD"
    tools:context=".ui.text_recognition.TextRecognitionFragment">


    <ImageView
        android:id="@+id/descriptionImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rounded_image_background"
        android:padding="8dp"

        android:src="@drawable/icon_image"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="Description image for recognize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <Button
        android:id="@+id/uploadBtn"
        style="@style/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/blue_500"
        android:text="@string/upload"
        android:minHeight="50dp"
        android:textColor="#F6F6F6"
        app:icon="@drawable/icon_camera"
        app:iconSize="24dp"
        app:iconTint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="@+id/recognizeTextBtn"
        app:layout_constraintStart_toStartOf="@+id/recognizeTextBtn"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recognizedDescriptionLayout"
        style="@style/editTextStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:maxHeight="220dp"
        android:textColorHint="@color/hint_color"
        app:endIconDrawable="@drawable/icon_remove"
        app:endIconMode="clear_text"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintBottom_toTopOf="@+id/setDescriptionBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recognizeTextBtn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recognizedDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:minLines="7"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/recognizeTextBtn"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:minHeight="50dp"
        android:backgroundTint="#DAE5ED"
        android:text="@string/process_text"
        android:textColor="@color/blue_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadBtn" />

    <Button
        android:id="@+id/setDescriptionBtn"
        style="@style/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#232743"
        android:text="@string/set_description"
        android:textSize="20sp"
        android:textColor="#F6F6F6"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/textProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recognizedDescriptionLayout"
        app:layout_constraintEnd_toEndOf="@+id/recognizedDescriptionLayout"
        app:layout_constraintStart_toStartOf="@+id/recognizedDescriptionLayout"
        app:layout_constraintTop_toTopOf="@+id/recognizedDescriptionLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>